# k8-watch-deploy

./: Cargo.toml  README.md  k9s-plugin.yaml
src/: main.rs
