[package]
name = "k8-pod-watch"
description = "k8 watch for pod changes and report (include MacOS notification window)"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.38.1", features = ["full"] }
kube = { version = "0.92.1", features = ["runtime", "derive", "unstable-runtime"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
futures = { version = "0.3.17", default-features = false }
mac-notification-sys = "0.6.1"
clap = { version = "4.5.9", features = ["derive"] }
